<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    android:fitsSystemWindows="true"
    android:padding="5dp">

    <ProgressBar
        android:id="@+id/processing_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:progressTint="@color/colorAccent"
        android:progressBackgroundTint="@color/lightGrey"
        android:indeterminateTint="@color/colorAccent"
        style="?android:attr/progressBarStyleHorizontal"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp">

        <ImageButton
            android:id="@+id/btnModeAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_auto_off_36dp"
            android:contentDescription="@string/auto_button"/>

        <ImageButton
            android:id="@+id/btnLang1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/btnModeAuto"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_counter_1_off_36dp"
            android:contentDescription="@string/lang1"/>

        <ImageButton
            android:id="@+id/btnLang2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/btnLang1"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_counter_2_off_36dp"
            android:contentDescription="@string/lang2"/>



        <ImageButton
            android:id="@+id/btnKeyboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_keyboard_36dp"
            android:contentDescription="@string/exit_button"/>

        <ImageButton
            android:id="@+id/btnBackend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/btnTranslate"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_cloud_off_36dp"
            android:contentDescription="@string/backend_toggle" />

        <ImageButton
            android:id="@+id/btnTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/darkGrey"
            android:src="@drawable/ic_english_off_36dp"
            android:contentDescription="@string/translate"/>

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_status"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:textSize="20dp"
        android:textColor="@android:color/holo_red_dark" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_buttons"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/btnDash"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_dash_48dp"
            android:contentDescription="@string/dash_button"/>
        <ImageButton
            android:id="@+id/btnDot"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_dot_48dp"
            android:contentDescription="@string/dot_button"/>
        <Button
            android:id="@+id/btnSpace"
            android:layout_width="30dp"
            android:layout_height="48dp"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:text=""
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:contentDescription="@string/space_button"/>
        <ImageButton
            android:id="@+id/btnRecord"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_mic_48dp"
            android:contentDescription="@string/record_button"/>
        <ImageButton
            android:id="@+id/btnDel"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_keyboard_del_48dp"
            android:contentDescription="@string/delete_button"/>
        <ImageButton
            android:id="@+id/btnEnter"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_button_background"
            android:src="@drawable/ic_keyboard_return_48dp"
            android:contentDescription="@string/return_button"/>

    </LinearLayout>

</LinearLayout>
